website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite
spec:
  selector:
    app: mywebsite
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
