website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: myherginniewebsite
spec:
  ingressClassName: mynginx
  rules:
    - http:
      paths:
        - path: /herginnie
          backend:
            service:
              name: mywebsite
              port:
                nubmer: 3000
